--- a/#src/blocks/productPage/faq.html
+++ b/#src/blocks/productPage/faq.html
@@ -2,71 +2,200 @@
 	<div class="container">
 		<p class="text-huge p-16">Ответы на вопросы, которые могут у вас возникнуть:</p>
 		<div class="dropdown">
-			<div class="js-dropdown-item">
-				<div class="js-dropdown-head dropdown__head">
-					<p class="text-extra-small">Как действует Toplash Lash and Brow?</p>
-					<button class="btnRound">
-						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
-					</button>
+			@@if(page === "productPage"){
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Усилится / ускорится ли результат, если использовать сыворотку Toplash Lash and Brow чаще раза в день?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Клинические испытания подтвердили безопасность средства, однако они не проводились на женщинах в периоды лактации и беременности, а потому подтвердить или опровергнуть его безвредность не представляется возможным.</p>
+						<p>Мы настоятельно рекомендуем проконсультироваться с врачом или же вообще воздержаться от применения продукта до истечения вышеназванных периодов.</p>
+					</div>
 				</div>
-				<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum perferendis quae nihil itaque quia exercitationem illo assumenda quis. Libero, adipisci.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Perspiciatis voluptate temporibus consectetur.</p>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">На какой курс рассчитан флакон сыворотки?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Флакон Toplash Lash and Brow объемом 3 мл., рассчитан на 2-3 месяца ежедневного применения, объемом 6 мл., рассчитан на 4-6 месяца ежедневного применения.</p>
+					</div>
 				</div>
-			</div>
-			<div class="js-dropdown-item">
-				<div class="js-dropdown-head dropdown__head">
-					<p class="text-extra-small">Какой состав у Toplash Lash and Brow?</p>
-					<button class="btnRound">
-						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
-					</button>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Безопасна ли сыворотка Toplash Lash and Brow для беременных и кормящих женщин?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Клинические испытания подтвердили безопасность средства, однако они не проводились на женщинах в периоды лактации и беременности, а потому подтвердить или опровергнуть его безвредность не представляется возможным.</p>
+						<p>Мы рекомендуем проконсультироваться с врачом.</p>
+					</div>
 				</div>
-				<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-					<p>Lorem ipsum dolor sit.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magni numquam sed quos ipsam omnis officiis perferendis ea iste. A debitis voluptas, tenetur, quibusdam aspernatur laboriosam molestias qui in, ab magnam vitae?</p>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur rem explicabo, quidem corporis labore iusto quos.</p>
+			}
+			@@if(page === "gel"){
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Можно ли использовать гель с карандашом для бровей?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Если вы используете карандаш для бровей в своем макияже, то сначала нанесите карандаш, а затем зафиксируйте гелем для бровей.</p>
+					</div>
 				</div>
-			</div>
-			<div class="js-dropdown-item">
-				<div class="js-dropdown-head dropdown__head">
-					<p class="text-extra-small">Что произойдет, если прекратить использовать сыворотку Toplash Lash and Brow?</p>
-					<button class="btnRound">
-						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
-					</button>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Будет ли эффект такой же сильный как от сыворотки Toplash Lash and Brow ?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Гель обладает более мягким эффектом, такого сильного роста волосков как от сыворокти Toplash Lash and Brow не будет.</p>
+						<p>Но в сочетании эти оба средства дадут максимальный результат.</p>
+					</div>
 				</div>
-				<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-					<p>При отсутствии постоянной поддержки ресницы и брови обновятся и приобретут свой первоначальный вид. Этого можно избежать, если продолжать наносить сыворотку несколько раз в неделю для закрепления полученных результатов.</p>
-					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Hic dolore, optio quis.</p>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Dolor commodi dolorem quibusdam totam autem vero excepturi voluptatum laboriosam quidem optio? Perferendis quasi recusandae eius eveniet temporibus, ipsum consequuntur illum beatae possimus, nobis.</p>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Способствует ли гель росту бровей?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Гель для бровей Toplash гибко фиксирует волоски а так же питает брови, что помогает приобрести им здоровый и ухоженный вид.</p>
+						<p>Для максимального эффекта мы советуем сочетать с сывороткой для роста ресниц и бровей Toplash Lash and Brow. Наносите гель в течении дня а сыворотку перед сном.</p>
+					</div>
 				</div>
-			</div>
-			<div class="js-dropdown-item">
-				<div class="js-dropdown-head dropdown__head">
-					<p class="text-extra-small">Что будет, если пропустить день использования сыворотки Toplash Lash and Brow?</p>
-					<button class="btnRound">
-						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
-					</button>
+			}
+			@@if(page === "mascara"){
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Могу ли я использовать тушь вместе с сывороткой Toplash Lash and Brow?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Тушь Toplash отлично подходит для использования с Toplash lash and brow. Идеально подчеркнет ваш результат после использования сыворотки.</p>
+					</div>
 				</div>
-				<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum perferendis quae nihil itaque quia exercitationem illo assumenda quis. Libero, adipisci.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Perspiciatis voluptate temporibus consectetur.</p>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Тушь Toplash Mascara гипоаллергенная? </p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Тушь полностью гипоаллергенна – и подходит для использования даже на самых чувствительных глазах.</p>
+					</div>
 				</div>
-			</div>
-			<div class="js-dropdown-item">
-				<div class="js-dropdown-head dropdown__head">
-					<p class="text-extra-small">Можно ли пользоваться сывороткой Toplash Lash and Brow и косметикой?</p>
-					<button class="btnRound">
-						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
-					</button>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Является ли тушь водостойкой?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Формула разработана таким образом, что средство легко смывается теплой водой, но устойчиво к дождю и слезам радости.</p>
+					</div>
 				</div>
-				<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-					<p>Lorem ipsum dolor sit.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magni numquam sed quos ipsam omnis officiis perferendis ea iste. A debitis voluptas, tenetur, quibusdam aspernatur laboriosam molestias qui in, ab magnam vitae?</p>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur rem explicabo, quidem corporis labore iusto quos.</p>
+			}
+			@@if(page === "stamp"){
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Что если одна из стоон не прокрашивает идеально?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Это может поизойти если флакон долгое время находился в вертикальном положении, положите флакон горизонтально на несколько часов, после чего обе стороны впитают краску равномерно.</p>
+					</div>
 				</div>
-			</div>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Как наносить стрелки штампом?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Аккуратно поставьте штамп в уголке глаза, переверните маркер заполните непропечатанное пространство и проведите линию вдоль линии роста ресниц.</p>
+						<p>Можно использовать как в один, так и два слоя. Следующий слой наносите после того, как высохнет предыдущий.</p>
+					</div>
+				</div>
+			}
+			@@if(page === "roller"){
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Есть ли инструкция как делать массаж лица?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Да, в комлекте вы найдете подробную инструкцию с инфографикой, советами по использованию и хранению роллера.</p>
+					</div>
+				</div>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Есть ли в комплекте мешочек для хранения роллера?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Да, в комплекте имеется мешочек для хранения.</p>
+					</div>
+				</div>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Как мне охладить роллер?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Достаточно положить роллер в мешочек и оставить в морозильной камере вашего холодильника на несколько часов.</p>
+					</div>
+				</div>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Если мой роллер пришел поврежденным?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Каждый роллер проверяется перед отправкой на наличие сколов и повреждений. Но иногда курьерские службы не очень аккуратно доставялют заказы. В случае, если вы получили поврежденный товар, мы сразу же заменим вам на новый.</p>
+						<p>Достачтоно прислать нам фотографию поврежденного роллера на адрес <a class="link" href="mailto:sales@toplash.ru">sales@toplash.ru</a></p>
+					</div>
+				</div>
+			}
+			@@if(page === "set"){
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Нет информации</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo rem cumque, culpa voluptate ullam suscipit? Similique eveniet aliquam dolorum adipisci pariatur minus labore ea voluptatibus, sunt cum at maxime mollitia?</p>
+					</div>
+				</div>
+			}
 		</div>
 	</div>
 </div>
