--- a/#src/blocks/productPage/result21.html
+++ b/#src/blocks/productPage/result21.html
@@ -14,8 +14,24 @@
 					</div>
 					<div class="nlc-mb-16">
 						<p class="text-huge">@@title</p>
-						@@for (var i = 0; i < text.length; i++) {
-						  <p>`+text[i]+`</p>
+						@@if(text == "textProductPage"){
+							<p>Сыворотка потрясающая 🥰 после родов и неудачных наращиваний наконец-то ресницы восстанавливаются! Наношу так же на брови с гелем для укладки бровей Toplash, после перещипываний так же стали возвращаться волоски, ура! </p>
+							<p>На фото месяц использования)) Анна</p>
+						}
+						@@if(text == "textGel"){
+							<p>Активные компоненты геля, такие как Myristoyl Pentapeptide 17, Органическое Касторовое масло и экстракт Алое Вера, глубоко проникают в волосяные фолликулы и обволакивают волоски по всей длине, интенсивно питая и увлажняя их. Мелкомолекулярная формула обеспечивает максимальную трофику компонентов, насыщая каждый волосок от корней до кончиков, стимулируя активный рост и уплотняя структуру волоска.</p>
+							<p>Если вы устали от непослушных бровей, часто выщипывали, окрашивали некачественной краской и волоски стали тонкими, редкими и тусклыми – начните использовать наш инновационный гель для бровей! Toplash Fix and Grow brow Gel - это не только завершение идеального образа для любого случая, но и возможность оздоровить и вырастить красивые брови.</p>
+							<p>Для достижения максимальных результатов, используйте сыворотку для роста ресниц и бровей Toplash Lash and Brow перед сном, а гель для роста и фиксации Toplash Fix and Grow brow gel – в течение дня. Гель можно наносить в два и более слоев, он не оставляет белесого налета. Брови приобретают естественный блеск и ухоженные вид.</p>
+						}
+						@@if(text == "textMascara"){
+							<p>В состав нашей туши входит экстрачерный пигмент на основе древесного угля, который делает ваш взгляд невероятно выразительным и ярким. Благодаря специальной формуле, Toplash Extra Ebony Mascara ложиться идеально ровно, не скатываясь в комочки и не осыпаясь.</p>
+							<p>Изогнутая щеточка подкручивает даже самые прямые и короткие ресницы, приподнимая их от корней и фиксируя изгиб. Тушь идеально подчеркивает эффект от использования сыворотки Toplash Lash and Brow.</p>
+							<p>Формула разработана таким образом, что средство легко смывается теплой водой, но устойчиво к дождю и слезам радости. Для демакияжа туши достаточно просто намочить ресницы теплой водой, слегка помассировав, снять тушь чулочным методом. Так же поддаётся снятию мицелярной водой.</p>
+							<p>Тушь полностью гипоаллергенна – и подходит для использования даже на самых чувствительных глазах.</p>
+						}
+						@@if(text == "textStamp"){
+							<p>Идеальные чёрные стрелки - это самый беспроигрышный способ добавить взгляду выразительности.</p>
+							<p>Аккуратные и строгие для офиса или деловой встречи, дерзкие и безбашенные на рок-концерт или вечеринку, идеальные голливудские стрелки на праздник или модный показ - выбирать тебе!.</p>
 						}
 					</div>
 					<div class="bottomLil">
