--- a/#src/info.html
+++ b/#src/info.html
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="p-16">
 			<p class="text-huge">Заказ №18105</p>
-			<p class="darkGray">Ожидает оплату</p>
+			<p class="darkGray">Ваш заказ принят</p>
 		</div>
 		<div class="cart__row">
 			<div class="cart__col mod-col-1 nlc-mb-32">
