--- a/#src/blocks/productPage/reviews.html
+++ b/#src/blocks/productPage/reviews.html
@@ -1,6 +1,6 @@
 <div class="container main-p-32-8">
 	<div class="p-8">
-		<p class="text-huge mb-8">Отзывы реальных девочек.</p>
+		<p class="text-huge mb-8">Отзывы реальных клиентов</p>
 		<p class="text-medium darkGray">Все никак не можешь решиться? Начни отсюда.</p>
 	</div>
 	<div class="reviewCategory">
