--- a/#src/blocks/productPage/roller-block-X.html
+++ b/#src/blocks/productPage/roller-block-X.html
@@ -8,7 +8,7 @@
 						<svg class="topLil__2"><use xlink:href="img/sprite/icons-sprite.svg#lil-1"/></svg>
 					</div>
 					<div class="nlc-mb-16">
-						<p class="text-huge">Ваша кожа более гладкая и сеяющая.</p>
+						<p class="text-huge">Кожа лица будет гладкая и сияющая.</p>
 						<p class="text-medium darkGray">Это лишь некоторые позитивные свойства роллера</p>
 						<ol class="list-ol mod-pl-0">
 							<li>Стимулирует выработку собственного коллагена</li>
