--- a/#src/blocks/productPage/stamp-block-X.html
+++ b/#src/blocks/productPage/stamp-block-X.html
@@ -9,8 +9,8 @@
 					</div>
 					<div class="nlc-mb-32">
 						<p class="text-huge">Создавайте любые стрелки с помощью Toplash eyeliner</p>
-						<p>Вы можете доставить товар в любую точку России удобным для вас способом.</p>
-						<p>Оплата производится как онлайн так и непосредственно при получени товара на руки. </p>
+						<p>Супер стойкая черная подводка TopLash eyeliner and wing stamp воплотит с тобой десятки вариантов макияжа, но главное, теперь этот процесс займёт считанные секунды.</p>
+						<p>Двусторонний Toplash eyeliner имеет специальный штампик в виде хвостика стрелочки с одной стороны и тонкий аппликатор с другой. Теперь сделать идеально ровные и симметричные стрелки проще простого!</p>
 					</div>
 					<div class="bottomLil">
 						<svg class="bottomLil__1"><use xlink:href="img/sprite/icons-sprite.svg#lil-2"/></svg>
