--- a/#src/bonus-program.html
+++ b/#src/bonus-program.html
@@ -21,8 +21,7 @@
 						</div>
 						<div class="nlc-mb-32">
 							<p class="text-huge">Регистрируйтесь, что бы участвовать в бонусной программе</p>
-							<p>We are committed to creating thoughtful, modern hair care treatments that serve to empower and embrace natural beauty.</p>
-							<p>Always clean ingredients, backed by science and filled with passion.</p>
+							<p>Клуб Toplash - это новинки, акции и супер-скидки “только для своих” - для зарегистрированных пользователей.</p>
 							<button class="btn md4-w-100">Зарегистрироваться</button>
 						</div>
 						<div class="bottomLil">
@@ -101,12 +100,12 @@
 				</div>
 				<div class="col-2 p-16">
 					<div class="nlc-mb-16">
-						<p class="text-huge">Легкий способ заработать!</p>
+						<p class="text-huge">Получи подарок за честный отзыв!</p>
 						<p class="text-medium">Что для этого нужно? Все просто:</p>
 						<ol class="list-ol">
-							<li>Оставляйте комментарий на сайте (маркетплейсе) где приобрели Toplash.</li>
-							<li>Скидывайте нам скриншот.</li>
-							<li>После проверки гарантировано получайте реальные деньги на карту.</li>
+							<li>Оставьте отзыв на продукт бренда Toplash на сайте Wildberries.</li>
+							<li>Подпишитесь на наш телеграмм канал <a class="link" href="https://t.me/toplash">@toplash</a> и следуйте инструкции бота.</li>
+							<li>После проверки отзыва мы оправим бонус на вашу карту.</li>
 						</ol>
 					</div>
 				</div>
@@ -117,54 +116,57 @@
 			<div class="dropdown">
 				<div class="js-dropdown-item">
 					<div class="js-dropdown-head dropdown__head">
-						<p class="text-extra-small">Как действует Toplash Lash and Brow?</p>
+						<p class="text-extra-small">Как я могу потратить баллы за регистрацию?</p>
 						<button class="btnRound">
 							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum perferendis quae nihil itaque quia exercitationem illo assumenda quis. Libero, adipisci.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Perspiciatis voluptate temporibus consectetur.</p>
+						<p>Вы можете потратить баллы на свой первый заказ сразу после регистрации.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
 					<div class="js-dropdown-head dropdown__head">
-						<p class="text-extra-small">Какой состав у Toplash Lash and Brow?</p>
+						<p class="text-extra-small">Как начисляются баллы за заказы моих друзей?</p>
 						<button class="btnRound">
 							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Lorem ipsum dolor sit.</p>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magni numquam sed quos ipsam omnis officiis perferendis ea iste. A debitis voluptas, tenetur, quibusdam aspernatur laboriosam molestias qui in, ab magnam vitae?</p>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur rem explicabo, quidem corporis labore iusto quos.</p>
+						<p>Если ваш друг или подруга свершили заказ и получили его , то ваши бонусные баллы будут доступны в личном кабинете  через 24 часа.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
 					<div class="js-dropdown-head dropdown__head">
-						<p class="text-extra-small">Что произойдет, если прекратить использовать сыворотку Toplash Lash and Brow?</p>
+						<p class="text-extra-small">Куда мне прислать скриншот отзыва? </p>
 						<button class="btnRound">
 							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>При отсутствии постоянной поддержки ресницы и брови обновятся и приобретут свой первоначальный вид. Этого можно избежать, если продолжать наносить сыворотку несколько раз в неделю для закрепления полученных результатов.</p>
-						<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Hic dolore, optio quis.</p>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Dolor commodi dolorem quibusdam totam autem vero excepturi voluptatum laboriosam quidem optio? Perferendis quasi recusandae eius eveniet temporibus, ipsum consequuntur illum beatae possimus, nobis.</p>
+						<p>Подписывайтесь на наш телеграмм канал @toplash и следуйте инструкции бота.</p>
 					</div>
 				</div>
 				<div class="js-dropdown-item">
 					<div class="js-dropdown-head dropdown__head">
-						<p class="text-extra-small">Что будет, если пропустить день использования сыворотки Toplash Lash and Brow?</p>
+						<p class="text-extra-small">Могу ли я получить бонус за отзыв на сайте Toplash.ru?</p>
 						<button class="btnRound">
 							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
 						</button>
 					</div>
 					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum perferendis quae nihil itaque quia exercitationem illo assumenda quis. Libero, adipisci.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Perspiciatis voluptate temporibus consectetur.</p>
+						<p>Акция бонус за отзыв доступна только при заказе продукции на маркетплейсе Wildberries.</p>
+					</div>
+				</div>
+				<div class="js-dropdown-item">
+					<div class="js-dropdown-head dropdown__head">
+						<p class="text-extra-small">Как и когда я получу свой бонус за отзыв?</p>
+						<button class="btnRound">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"/></svg>
+						</button>
+					</div>
+					<div class="nlc-mb-8 js-dropdown-body dropdown__body">
+						<p>Бонус за отзыв вы получите на свою карту сразу после отправки скриншота с отзывом.</p>
 					</div>
 				</div>
 			</div>
