--- a/#src/gel-for-eyebrows.html
+++ b/#src/gel-for-eyebrows.html
@@ -12,7 +12,7 @@
 	@@include('blocks/productPage/result21.html', {
 		"imageSrc": "img/result21/02.jpg",
 		"title": "Результат за 21 день — это реально!",
-		"text": ["We are committed to creating thoughtful, modern hair care treatments that serve to empower and embrace natural beauty.", "Always clean ingredients, backed by science and filled with passion."]
+		"text": "textGel"
 	})
 	<div class="main-p-32-0">
 		@@include('blocks/productPage/stick.html',{
@@ -31,7 +31,7 @@
 					"icon": "euro",
 					"cardClass": "v5",
 					"label": "Европейское качество",
-					"text": "Топлаш прошёл все исследования Европейской комиссии и рекомендован к использованию."
+					"text": "Продукция бренда Toplash производится на территории Европейского союза, имеет сертификаты COA и CPNP."
 				},
 				"3": {
 					"icon": "big-ok",
@@ -43,16 +43,20 @@
 		})
 	</div>
 	@@include('blocks/productPage/unique.html',{
+		"title": "Что делает гель Fix & Grow  уникальным?",
 		"classTableBG": "bg-green",
+		"classTable": "table-2",
 		"img1": "img/comparison/02.webp",
 		"img2": "img/comparison/02_b.webp",
-		"pageIsNotMascara": true
+		"page": "gel"
 	})
 	<div class="main-pt-64">
 		@@include('blocks/productPage/warrantyWork.html',{
 			"imageSrc": "img/guarantee/05.jpg"
 		})
-		@@include('blocks/productPage/faq.html')
+		@@include('blocks/productPage/faq.html',{
+			"page": "gel"
+		})
 	</div>
 	<div class="pb-16">
 		@@include('blocks/productPage/stories.html')
