--- a/#src/home.html
+++ b/#src/home.html
@@ -404,7 +404,7 @@
 						<div class="nlc-mb-32">
 							<p class="text-huge">Действие сыворотки для ресниц и бровей Toplash:</p>
 							<div class="nlc-mb-16">
-								<p>Действие высокотехнологичной формулы Toplash направлено на три фазы роста ресниц и бровей, она активизирует процессы регенерации и роcта волосков и обеспечивает им бережный уход.</p>
+								<p>Действие высокотехнологичной сыворотки для роста ресниц Toplash Lash and Brow Booster направлено на три фазы роста ресниц и бровей, она активизирует процессы регенерации и роcта волосков и обеспечивает им бережный уход.</p>
 								<ol class="list-ol">
 									<li>Увеличивает продолжительности фазы роста.</li>
 									<li>Ресницы и брови становятся сильнее и достигают своей максимальной длины.</li>
@@ -412,7 +412,7 @@
 								</ol>
 								<p>Всего через 21 день вызаметите результат. А если через 90 дней использования сыворотки вы не заметите роста — мы вернём деньги за покупку.</p>
 							</div>
-							<button class="btn md4-w-100">Узнать больше</button>
+							<button class="btn md4-w-100">Узнать больше о Toplash</button>
 						</div>
 						<div class="bottomLil">
 							<svg class="bottomLil__1"><use xlink:href="img/sprite/icons-sprite.svg#lil-2"></use></svg>
@@ -851,21 +851,21 @@
 						<div class="cardTerms v4 mod-v2">
 							<img loading="lazy" src="img/sprite/fill-sprite.svg#green-fire" alt="">
 							<p class="text-medium">Натуральный состав</p>
-							<p>Препарат прошёл исследования. Все компоненты абсолютно безопасны и гепоалергенны.</p>
+							<p>Все продукты компании Toplash сертифицированы абсолютно безопасный и гипоаллергенны.</p>
 						</div>
 					</div>
 					<div class="col-4 p-16">
 						<div class="cardTerms v5 mod-v2">
 							<img loading="lazy" src="img/sprite/fill-sprite.svg#euro" alt="">
 							<p class="text-medium">Европейское качество</p>
-							<p>Топлаш прошёл все исследования Европейской комиссии и рекомендован к использованию.</p>
+							<p>Продукция бренда Toplash производится на территории Европейского союза, имеет сертификаты COA и CPNP.</p>
 						</div>
 					</div>
 					<div class="col-4 p-16">
 						<div class="cardTerms v6 mod-v2">
 							<img loading="lazy" src="img/sprite/fill-sprite.svg#brow" alt="">
 							<p class="text-medium">Альтернатива наращиванию</p>
-							<p>Свои, настоящие ресницы всего за 21 день — наращивание попросту больше не нужно.</p>
+							<p>Свои, натуральные ресницы всего за 21 день. Наращивать ресницы больше не потребуется. </p>
 						</div>
 					</div>
 					<div class="col-4 p-16">
@@ -873,6 +873,7 @@
 							<img loading="lazy" src="img/sprite/fill-sprite.svg#security" alt="">
 							<p class="text-medium">Гарантия 90 дней</p>
 							<p>Если за это время вы оказались недовольны результатом, мы вернём все деньги.</p>
+							<p><a href="" class="link">Подробнее</a></p>
 						</div>
 					</div>
 				</div>
@@ -896,8 +897,9 @@
 						</div>
 						<div class="nlc-mb-16">
 							<p class="text-huge">Как появился бренд Toplash который мы знаем сегодня?</p>
-							<p>We are committed to creating thoughtful, modern hair care treatments that serve to empower and embrace natural beauty.</p>
-							<p>Always clean ingredients, backed by science and filled with passion.</p>
+							<p>Toplash Cosmetics , бренд основанный в Дублине, Ирландия, сегодня доступен в ЕС, США, Южной Америке, России и странах СНГ.</p>
+							<p>Наша миссия- подчеркнуть аутентичность.  Каждый продукт линейки бренда воплощает эту идею.</p>
+							<p>Наши специалисты разрабатывают косметику, придерживаясь философии минимализма, разумного потребления и полезных составов.</p>
 							<button class="btn md4-w-100">Читать историю</button>
 						</div>
 						<div class="bottomLil">
