--- a/#src/private.html
+++ b/#src/private.html
@@ -219,14 +219,15 @@
 			</div>
 			<div class="col-2 p-16">
 				<div class="nlc-mb-16">
-					<p class="text-huge">Легкий способ заработать!</p>
+					<p class="text-huge">Получи подарок за честный отзыв!</p>
 					<p class="text-medium">Что для этого нужно? Все просто:</p>
 					<ol class="list-ol">
-						<li>Оставляйте комментарий на сайте (маркетплейсе) где приобрели Toplash.</li>
-						<li>Скидывайте нам скриншот.</li>
-						<li>После проверки гарантировано получайте реальные деньги на карту.</li>
+						<li>Оставьте отзыв на продукт бренда Toplash на сайте Wildberries.</li>
+						<li>Подпишитесь на наш телеграмм канал <a class="link" href="https://t.me/toplash">@toplash</a> и следуйте инструкции бота.</li>
+						<li>После проверки отзыва мы оправим бонус на вашу карту.</li>
 					</ol>
-					<button class="btn md4-w-100 js-popup-open" data-popupid="screenshot">Отправить скриншот</button>
+					<!-- <button class="btn md4-w-100 js-popup-open" data-popupid="screenshot">Отправить скриншот</button> -->
+					<a href="https://t.me/toplash" class="btn md4-w-100">Отправить скриншот</a>
 				</div>
 			</div>
 		</div>
