--- a/#src/reviews.html
+++ b/#src/reviews.html
@@ -37,8 +37,7 @@
 						</div>
 						<div class="nlc-mb-16">
 							<p class="text-huge">Результат за 21 день — это реально!</p>
-							<p>We are committed to creating thoughtful, modern hair care treatments that serve to empower and embrace natural beauty.</p>
-							<p>Always clean ingredients, backed by science and filled with passion.</p>
+							<p>Сыворотка потрясающая 🥰 после родов и неудачных наращиваний наконец-то восстанавливаются! Наношу так же на брови с гелем для укладки бровей Toplash, после перещипываний так же стали возвращаться волоски, ура! На фото месяц использования)) Анна</p>
 						</div>
 						<div class="bottomLil">
 							<svg class="bottomLil__1"><use xlink:href="img/sprite/icons-sprite.svg#lil-2"/></svg>
@@ -188,7 +187,7 @@
 	</div>
 	<div class="reviews container main-p-32-8">
 		<div class="p-8">
-			<p class="text-huge mb-8">Отзывы реальных девочек.</p>
+			<p class="text-huge mb-8">Отзывы реальных клиентов</p>
 			<p class="text-medium darkGray">Все никак не можешь решиться? Начни отсюда.</p>
 		</div>
 		<div class="reviewCategory">
