Доработки: favicon, fonts

--- a/#src/blocks/common/head.html
+++ b/#src/blocks/common/head.html
@@ -3,6 +3,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/select2.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="preload" href="font/FuturaPT-Bold.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Bold.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Book.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Book.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Demi.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Demi.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="font/FuturaPT-ExtraBold.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="font/FuturaPT-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Heavy.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Heavy.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Light.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Light.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Medium.woff" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="font/FuturaPT-Medium.woff2" as="font" type="font/woff2" crossorigin>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/maskinput.js"></script>
 	<script src="js/slick.min.js"></script>
