--- a/#src/blocks/productPage/product.html
+++ b/#src/blocks/productPage/product.html
@@ -12,7 +12,7 @@
 						</button>
 						<div class="sliderBig__body js-sliderBig">
 							<div class="sliderBig__item">
-								<img data-lazy="img/other/01.jpg" src="" alt="">
+								<img width="600" height="488" data-lazy="img/other/01.jpg" src="" alt="">
 							</div>
 							<div class="sliderBig__item">
 								<img data-lazy="img/other/02.jpg" src="" alt="">
@@ -97,8 +97,10 @@
 				<div class="product__holder">
 					<div class="product__content">
 						<div class="mb-16">
-							<p class="text-huge">Toplash Lash & Brow</p>
-							<p class="text-medium">Средство для роста ресниц и бровей</p>
+							<h1>
+								<span class="text-huge">Toplash Lash & Brow</span>
+								<span class="text-medium">Средство для роста ресниц и бровей</span>
+							</h1>
 						</div>
 						<div class="f-jcsb-aic">
 							<button class="btnSec mb-16 mr-16 js-view-presentation-video">
