--- a/#src/blog.html
+++ b/#src/blog.html
@@ -13,13 +13,13 @@
 		<div class="d-flex md3-fww flexMod-1">
 			<div class="flex-1 p-16">
 				<a href="" class="cardImage">
-					<img loading="lazy" src="img/other/08.jpg" alt="">
+					<img width="1080" height="1080" loading="lazy" src="img/other/08.jpg" alt="">
 					<p class="text-medium p-16">Последняя статья на сайте</p>
 				</a>
 			</div>
 			<div class="flexMod-1__colMin md3-colMax p-16">
 				<a href="" class="cardImage">
-					<img loading="lazy" src="img/other/01.jpg" alt="">
+					<img width="600" height="488" loading="lazy" src="img/other/01.jpg" alt="">
 					<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
 				</a>
 			</div>
