--- a/#src/bonus-program.html
+++ b/#src/bonus-program.html
@@ -10,7 +10,7 @@
 			<div class="result21__row">
 				<div class="result21__col">
 					<div class="result21__image">
-						<img loading="lazy" src="img/other/06.jpg" alt="">
+						<img width="573" height="450" loading="lazy" src="img/other/06.jpg" alt="">
 					</div>
 				</div>
 				<div class="result21__col">
