--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -61,7 +61,7 @@
 	</div>
 	@@include('blocks/productPage/cost.html')
 	<div class="main-pt-32-pb-16">
-		@@include('blocks/productPage/stories.html')
+		@@include('blocks/productPage/stories.html', {"pageIsHome" : "false"})
 		@@include('blocks/productPage/feedback.html')
 		@@include('blocks/productPage/terms.html')
 		@@include('blocks/productPage/useful.html', {"pageIsInfo": false})
