--- a/#src/reviews.html
+++ b/#src/reviews.html
@@ -18,7 +18,7 @@
 						</button>
 						<div class="sliderBig__body js-sliderBig-reviews">
 							<div class="sliderBig__item">
-								<img data-lazy="img/other/10.jpg" src="" alt="">
+								<img width="647" height="647" data-lazy="img/other/10.jpg" src="" alt="">
 							</div>
 							<div class="sliderBig__item">
 								<img data-lazy="img/devOnly/bb_10_v2.jpg" src="" alt="">
