--- a/#src/blog-item.html
+++ b/#src/blog-item.html
@@ -8,12 +8,12 @@
 	<div class="paper container">
 		<div class="paper__row">
 			<div class="paper__colMax nlc-mb-32">
-				<div>
-					<p class="text-huge">Заголовок новости h1</p>
-					<p class="text-medium darkGray">Подзаголовок h2</p>
-				</div>
+				<h1>
+					<span class="text-huge">Заголовок новости h1</span>
+					<span class="text-medium darkGray">Подзаголовок h2</span>
+				</h1>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>
-				<img loading="lazy" class="maxW-100" src="img/other/crying-2.png" alt="">
+				<img width="920" height="603" loading="lazy" class="maxW-100" src="img/other/crying-2.png" alt="">
 				<p>Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, <a href="" class="link">ссылка в тексте</a> viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
 				<div>
 					<p class="text-medium mb-16">Пример списка ol</p>
