--- a/#src/cart.html
+++ b/#src/cart.html
@@ -44,7 +44,7 @@
 				</div>
 				<div class="js-movement-block-to-mob" data-id="1"></div>
 				<div class="js-movement-block-to-desc" data-id="2">
-					<div class="imageComm js-movement-block"><img loading="lazy" src="img/other/comm.jpg" alt=""></div>
+					<div class="imageComm js-movement-block"><img width="919" height="100" loading="lazy" src="img/other/comm.jpg" alt=""></div>
 				</div>
 				<div class="f-aic md4-fww">
 					<p>Войдите в свой акаунт, чтобы автоматически заполнить контактные данные</p>
