--- a/#src/home.html
+++ b/#src/home.html
@@ -26,7 +26,7 @@
 					</button>
 					<div class="fScreen__slider js-slider-baner slider-style-banner">
 						<div class="fScreen__image">
-							<img loading="lazy" src="img/other/08.jpg" alt="">
+							<img width="1080" height="1080" loading="lazy" src="img/other/08.jpg" alt="">
 						</div>
 						<div class="fScreen__image">
 							<img loading="lazy" src="img/other/05.jpg" alt="">
@@ -81,7 +81,7 @@
 		</div>
 	</div>
 	<div class="main-pt-32-pb-128 container">
-		<p class="p-16 text-huge">Самые популярные продукты Toplash:</p>
+		<h2 class="p-16 text-huge">Самые популярные продукты Toplash:</h2>
 		<div class="scroll mod-anchor" data-scroll-id="4">
 			<div class="scroll__body">
 				<ul class="scroll__scroll js-filter-slider">
@@ -402,7 +402,7 @@
 							<svg class="topLil__2"><use xlink:href="img/sprite/icons-sprite.svg#lil-1"></use></svg>
 						</div>
 						<div class="nlc-mb-32">
-							<p class="text-huge">Действие сыворотки для ресниц и бровей Toplash:</p>
+							<h2 class="text-huge">Действие сыворотки для ресниц и бровей Toplash:</h2>
 							<div class="nlc-mb-16">
 								<p>Действие высокотехнологичной сыворотки для роста ресниц Toplash Lash and Brow Booster направлено на три фазы роста ресниц и бровей, она активизирует процессы регенерации и роcта волосков и обеспечивает им бережный уход.</p>
 								<ol class="list-ol">
@@ -845,7 +845,7 @@
 		</div>
 		<div class="main-p-32-0">
 			<div class="container">
-				<p class="text-huge p-16">Почему Toplash?</p>
+				<h2 class="text-huge p-16">Почему Toplash?</h2>
 				<div class="d-flex-w">
 					<div class="col-4 p-16">
 						<div class="cardTerms v4 mod-v2">
@@ -896,7 +896,7 @@
 							<svg class="topLil__2"><use xlink:href="img/sprite/icons-sprite.svg#lil-1"></use></svg>
 						</div>
 						<div class="nlc-mb-16">
-							<p class="text-huge">Как появился бренд Toplash который мы знаем сегодня?</p>
+							<h2 class="text-huge">Как появился бренд Toplash который мы знаем сегодня?</h2>
 							<p>Toplash Cosmetics , бренд основанный в Дублине, Ирландия, сегодня доступен в ЕС, США, Южной Америке, России и странах СНГ.</p>
 							<p>Наша миссия- подчеркнуть аутентичность.  Каждый продукт линейки бренда воплощает эту идею.</p>
 							<p>Наши специалисты разрабатывают косметику, придерживаясь философии минимализма, разумного потребления и полезных составов.</p>
@@ -912,7 +912,7 @@
 		</div>
 	</div>
 	<div class="main-pt-64-pb-16">
-		@@include('blocks/productPage/stories.html')
+		@@include('blocks/productPage/stories.html', {"pageIsHome" : "true"})
 		<div class="container main-p-32-0 o-h">
 			<div class="p-16">
 				<div class="mb-8 d-inline-flex">
@@ -928,7 +928,7 @@
 		</div>
 		<div class="container main-p-32-0">
 			<div class="p-16">
-				<p class="text-huge mb-8">Блог Toplash</p>
+				<h2 class="text-huge mb-8">Блог Toplash</h2>
 				<p class="text-medium darkGray">Открываем глаза на важные вопросы</p>
 			</div>
 			<div class="d-flex-w">
