--- a/#src/set.html
+++ b/#src/set.html
@@ -39,7 +39,7 @@
 		})
 	</div>
 	<div class="pb-16">
-		@@include('blocks/productPage/stories.html')
+		@@include('blocks/productPage/stories.html', {"pageIsHome" : "false"})
 		@@include('blocks/productPage/feedback.html')
 		@@include('blocks/productPage/terms.html')
 		@@include('blocks/productPage/useful.html', {"pageIsInfo": false})
