--- a/#src/shipping-and-payment.html
+++ b/#src/shipping-and-payment.html
@@ -10,7 +10,7 @@
 			<div class="result21__row">
 				<div class="result21__col">
 					<div class="result21__image">
-						<img loading="lazy" src="img/other/02.jpg" alt="">
+						<img width="647" height="512" loading="lazy" src="img/other/02.jpg" alt="">
 					</div>
 				</div>
 				<div class="result21__col">
